# biometrics

./: Readme.md  pyproject.toml  setup.py
src/biometrics/: eer.py  frr.py  iapar.py  threshold.py
src/biometrics.egg-info/: PKG-INFO  SOURCES.txt
src/common_metrics/: __init__.py  metrics.py
src/common_metrics.egg-info/: PKG-INFO
tests/: test.py
