[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "biometrics"
version = "0.0.1"
authors = [
  { name="Sushrut Patwardhan", email="sushrutpatwardhan@gmail.com" },
]
description = "Package for commonly used metrics in bio-metrics."
readme = "README.md"
requires-python = ">=3.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
